@@ -2,6 +2,12 @@
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Header$
 
+  1 Sep 2002; Martin Schlemmer <azarah@gentoo.org> :
+
+  Change cleanup() in sandbox.c not to exit with fail status if
+  the pidsfile is missing.  We really should still display sandbox
+  violations if they occured.
+
   31 Aug 2002; Martin Schlemmer <azarah@gentoo.org> :
 
   Update cleanup() in sandbox.c to remove the PIDSFILE if this is
